--- a/ShoppingManagement/ShoppingSystem/src/main/webapp/homepage.html
+++ b/ShoppingManagement/ShoppingSystem/src/main/webapp/homepage.html
@@ -64,6 +64,60 @@
   </span>
     </el-dialog>
 
+    <el-dialog
+            title="商品详情"
+            :visible.sync="dialogConsultation"
+            width="30%">
+        <!--表格-->
+        <template >
+            <el-table
+                    :data="consultation"
+                    style="width: 100%"
+                    :row-class-name="tableRowClassName"
+                    @selection-change="handleSelectionChange"
+            >
+                <el-table-column
+                        prop="userName"
+                        label="用户"
+                        align="center"
+                >
+                </el-table-column>
+                <el-table-column
+                        prop="consultation"
+                        label="评论"
+                        align="center"
+                >
+                </el-table-column>
+                <el-table-column
+                        align="center">
+                    <template slot-scope="scope">
+                        <el-row>
+                            <el-button type="primary"  @click="reply(scope.row)">回复</el-button>
+                        </el-row>
+                    </template>
+                </el-table-column>
+            </el-table>
+        </template>
+        <span slot="footer" class="dialog-footer is-align-middle">
+    <el-button type="primary" @click="dialogConsultation = false">确 定</el-button>
+    <el-button type="primary" @click="askP">商品好不好？问大家</el-button>
+
+  </span>
+    </el-dialog>
+    <el-dialog
+            title="商品详情"
+            :visible.sync="dialogAsk"
+            width="30%">
+        <el-form :model="ask" label-width="80px">
+            <el-form-item label="提问内容">
+                <el-input type="textarea" v-model="ask.consultation"></el-input>
+            </el-form-item>
+        </el-form>
+    <el-button type="primary" @click="sendQuestion">确 定</el-button>
+
+  </span>
+    </el-dialog>
+
 
 
     <el-dialog
@@ -249,6 +303,40 @@
             this.selectAll();
         },
         methods: {
+            sendQuestion(){
+                var _this = this;
+                axios.defaults.headers.common['Authorization']=localStorage.getItem('Authorization');
+                axios({
+                    method:"post",
+                    url:"http://localhost:8080/ShoppingSystem/goods/sendConsultation",
+                    data:this.ask
+                }).then(function (resp){
+                    if (resp.data.code == 1){
+                        alert("success");
+                    }else {
+                        alert("fail");
+                    }
+                })
+            },
+            askP(){
+              ask.goodsId = this.consultation.goodsId;
+              this.dialogAsk = true;
+            },
+            searchConsultation(row){
+                var _this = this;
+                axios.defaults.headers.common['Authorization']=localStorage.getItem('Authorization');
+                axios({
+                    method:"post",
+                    url:"http://localhost:8080/ShoppingSystem/goods/selectConsultation",
+                    data:row.id
+                }).then(function (resp){
+                    if (resp.data.code == 1){
+                        _this.consultation = resp.data.data;
+                        _this.consultation.goodsId = row.id;
+                        _this.dialogConsultation = true;
+                    }
+                })
+            },
             MyShop(){
                 var _this = this;
                 axios.defaults.headers.common['Authorization']=localStorage.getItem('Authorization');
@@ -263,8 +351,6 @@
                         _this.dialogApply = true;
                     }
                 })
-
-                dialogApply = true
             },
             searchMyOrders(){
                 if (localStorage.getItem('Authorization') != ''){
@@ -402,6 +488,8 @@
                     shopName:''
                 },
                 searchName:'',
+                dialogAsk:false,
+                dialogConsultation:false,
                 dialogApplyError:false,
                 dialogApply:false,
                 dialogVisible:false,
@@ -446,7 +534,17 @@
                     description:"",
                     shopName:'',
                     shopId:''
-                }]
+                }],
+                consultation:[{
+                    id:'',
+                    goodsId:'',
+                    userName:'',
+                    consultation:''
+                }],
+                ask:{
+                    goodsId:'',
+                    consultation:'',
+                }
 
             }
         }
