consultation and reply

--- a/ShoppingManagement/ShoppingSystem/src/main/webapp/homepage.html
+++ b/ShoppingManagement/ShoppingSystem/src/main/webapp/homepage.html
@@ -92,7 +92,7 @@
                         align="center">
                     <template slot-scope="scope">
                         <el-row>
-                            <el-button type="primary"  @click="reply(scope.row)">回复</el-button>
+                            <el-button type="primary"  @click="answer(scope.row)">回复</el-button>
                         </el-row>
                     </template>
                 </el-table-column>
@@ -101,9 +101,9 @@
         <span slot="footer" class="dialog-footer is-align-middle">
     <el-button type="primary" @click="dialogConsultation = false">确 定</el-button>
     <el-button type="primary" @click="askP">商品好不好？问大家</el-button>
-
   </span>
     </el-dialog>
+
     <el-dialog
             title="商品详情"
             :visible.sync="dialogAsk"
@@ -114,9 +114,41 @@
             </el-form-item>
         </el-form>
     <el-button type="primary" @click="sendQuestion">确 定</el-button>
-
-  </span>
     </el-dialog>
+
+
+    <el-dialog
+            title="商品详情"
+            :visible.sync="dialogReply"
+            width="30%">
+        <template >
+            <el-table
+                    :data="reply"
+                    style="width: 100%"
+                    :row-class-name="tableRowClassName"
+                    @selection-change="handleSelectionChange"
+            >
+                <el-table-column
+                        prop="userName"
+                        label="用户"
+                        align="center"
+                >
+                </el-table-column>
+                <el-table-column
+                        prop="reply"
+                        label="回复"
+                        align="center"
+                >
+                </el-table-column>
+            </el-table>
+        </template>
+
+        <el-input type="textarea" v-model="myReply.reply"></el-input>
+        <el-button type="primary" @click="sendReply">确 定</el-button>
+
+        </span>
+    </el-dialog>
+
 
 
 
@@ -303,6 +335,40 @@
             this.selectAll();
         },
         methods: {
+            sendReply(){
+
+                var _this = this;
+                axios.defaults.headers.common['Authorization']=localStorage.getItem('Authorization');
+                axios({
+                    method:"post",
+                    url:"http://localhost:8080/ShoppingSystem/goods/sendReply",
+                    data:this.myReply
+                }).then(function (resp){
+                    if (resp.data.code == 1){
+                        alert("success");
+                    }else {
+                        alert("fail");
+                    }
+                })
+            },
+            answer(row){
+                this.myReply.consultationId = row.id;
+                var _this = this;
+                axios.defaults.headers.common['Authorization']=localStorage.getItem('Authorization');
+                axios({
+                    method:"post",
+                    url:"http://localhost:8080/ShoppingSystem/goods/selectReply",
+                    data:row
+                }).then(function (resp){
+                    if (resp.data.code == 1){
+                        _this.reply = resp.data.data;
+                        _this.dialogReply = true;
+                    }else {
+                        alert("fail");
+                    }
+                })
+
+            },
             sendQuestion(){
                 var _this = this;
                 axios.defaults.headers.common['Authorization']=localStorage.getItem('Authorization');
@@ -319,7 +385,7 @@
                 })
             },
             askP(){
-              ask.goodsId = this.consultation.goodsId;
+              this.ask.goodsId = this.consultation.goodsId;
               this.dialogAsk = true;
             },
             searchConsultation(row){
@@ -372,7 +438,7 @@
                 axios({
                     method:"post",
                     url:"http://localhost:8080/ShoppingSystem/user/apply",
-                    data:this.apply
+                    data:_this.apply
                 }).then(function (resp){
                     if (resp.data.code == 1){
                         _this.dialogApply = false;
@@ -488,6 +554,7 @@
                     shopName:''
                 },
                 searchName:'',
+                dialogReply:false,
                 dialogAsk:false,
                 dialogConsultation:false,
                 dialogApplyError:false,
@@ -544,6 +611,15 @@
                 ask:{
                     goodsId:'',
                     consultation:'',
+                },
+                reply:[{
+                    consultationId:'',
+                    reply:'',
+                    userName:''
+                }],
+                myReply:{
+                    consultationId:'',
+                    reply:''
                 }
 
             }
